Neuer spieler wird auf eindeutigkeit überprüft modal für Spieler hinzufügen gestyled

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <div id="login-form">
         <div class="row">
             <div class="large-12 small-12 medium-12 columns">
+                <h2>Top Team Login</h2>
+
                 <form class="login-form">
                     <div class="error" style="display:none"></div>
                     <div class="row">
