--- a/manager/manager.html
+++ b/manager/manager.html
@@ -34,7 +34,7 @@
                     <li class="show-for-small">
                         <label>Top Team</label>
                     </li>
-                    <li><a href="nutmeg.html">Beiner Verwaltung</a></li>
+                    <li><a href="manager-nutmeg.html">Beiner Verwaltung</a></li>
                     <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
                 </ul>
