--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/app.css"/>
     <script src="foundation-js/modernizr.js"></script>
 </head>
-<body id="index-body">
+<body class="indexbg">
 
 <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
@@ -37,11 +37,25 @@
         </div>
         <div class="row">
             <div class="large-12 columns content-wrapper">
-                <div class="row" id="button-create-new-team">
-                    <a class="button large-9 small-10 small-offset-1 columns" href="#"
-                       data-reveal-id="modal-create-team">Neues Team
-                        anlegen</a>
+
+
+                <div class="tt-logo">
+                    <img src="img/team-icon-black.png">
+
+                    <h1 class="topteam-label">Top Team</h1>
+
+                    <div class="row" id="button-create-new-team">
+                        <a class="button" href="#"
+                           data-reveal-id="modal-create-team">Neues Team
+                            anlegen</a>
+                    </div>
+
+                    <h3>Verwalten Sie ihre Mannschaft </br> mit Top Team! </h3>
+
+                    <h3><b><i>#schnell #einfach #mobil</i></b></h3>
+
                 </div>
+
             </div>
         </div>
         <a class="exit-off-canvas"></a>
