--- a/player/nutmeg.html
+++ b/player/nutmeg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
-    <link rel='shortcut icon' type='image/x-icon' href='img/team.ico'/>
+    <link rel='shortcut icon' type='image/x-icon' href='../img/team.ico'/>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
@@ -12,9 +12,10 @@
     <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
     <![endif]-->
     <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons.css">
-    <link rel="stylesheet" href="../css/app.css"/>
-    <link rel="stylesheet" href="../jquery-ui/jquery.contextMenu.css"/>
     <link rel="stylesheet" href="../css/topbar.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
+
+
     <script src="../foundation-js/modernizr.js"></script>
     <script src="../js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -28,7 +29,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="../index.html">Top Team</a></h1>
+                        <h1><a href="#">Top Team - Beiner</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -40,7 +41,7 @@
                     <li class="show-for-small">
                         <label>Top Team</label>
                     </li>
-                    <li><a href="player.html">Spieler-Start</a>
+                    <li><a href="player.html">Training</a>
                     </li>
                     <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
@@ -54,6 +55,7 @@
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="player-container">
+                        <b>Training Beiner Übersicht:</b>
                         <table id="training-nutmeg-table">
                             <thead>
                             <tr>
@@ -77,6 +79,7 @@
                 <!-- player-nutmeg -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="training-container">
+                        <b>Beiner Ranking:</b>
                         <table id="player-nutmeg-table">
                             <thead>
                             <tr>
@@ -96,9 +99,7 @@
         <a class="exit-off-canvas"></a>
     </div>
 </div>
-
 <script src="../foundation-js/foundation.min.js"></script>
-<script type="text/javascript" src="../jquery-ui/jquery.ui.position.js"></script>
 <script>
     $(document).foundation();
 </script>
