--- a/trainer/training.html
+++ b/trainer/training.html
@@ -27,7 +27,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="#">Top Team</a></h1>
+                        <h1><a href="#">Top Team - Training</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -37,7 +37,7 @@
             <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
                     <li class="show-for-small">
-                        <label>Foundation</label>
+                        <label>Top Team</label>
                     </li>
                     <li><a href="team.html">Spielerkader</a>
                     </li>
@@ -57,6 +57,9 @@
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="player-container">
+                        <span data-tooltip class="has-tip"
+                              title="Spieler zum Training hinzufügen durch klicken auf Training!">Trainings Übersicht:</span>
+
                         <table id="training-table">
                             <thead>
                             <tr>
@@ -79,6 +82,8 @@
                 <!-- player-in-training-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="training-container">
+                        <span data-tooltip class="has-tip" title="Spieler Trainings Details durch klicken auf Spieler!">Trainingsbeteilung Ranking:</span>
+
                         <table id="player-training-table">
                             <thead>
                             <tr>
@@ -132,6 +137,7 @@
                 <tr>
                     <th id="player-icon">Spieler Avatar</th>
                     <th id="player-name">Spieler Name</th>
+
                 </tr>
                 </thead>
                 <tbody>
@@ -156,7 +162,6 @@
             <thead>
             <tr>
                 <th>Trainings Daten:</th>
-
             </tr>
             </thead>
             <tbody>
