--- a/manager/manager-nutmeg.html
+++ b/manager/manager-nutmeg.html
@@ -23,7 +23,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="#">Top Team</a></h1>
+                        <h1><a href="#">Top Team - Beiner</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -35,10 +35,11 @@
                     <li class="show-for-small">
                         <label>Top Team</label>
                     </li>
-                    <li><a href="manager.html">Verwalter Start</a>
+                    <li><a href="manager.html">Training</a>
                     <li><a href="../index.html" id="button-logout">Logout</a>
                     </li>
                 </ul>
+
             </aside>
         </div>
         <div class="row">
@@ -46,6 +47,8 @@
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="player-container">
+                        <span data-tooltip class="has-tip" title="Beiner eintragen durch Klick auf Training!">Trainings Beiner Übersicht:</span>
+
                         <table id="training-nutmeg-table">
                             <thead>
                             <tr>
@@ -64,6 +67,9 @@
                 <!-- player-nutmeg -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="training-container">
+                        <span data-tooltip class="has-tip"
+                              title="Bezahlte Beiner eingeben und durch Abhaken bestätigen!">Beiner Übersicht:</span>
+
                         <table id="player-nutmeg-table">
                             <thead>
                             <tr>
