--- a/manager/manager.html
+++ b/manager/manager.html
@@ -8,10 +8,10 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
-
-    <link rel="stylesheet" href="../css/app.css"/>
-    <link rel="stylesheet" href="../jquery-ui/jquery.contextMenu.css"/>
     <link rel="stylesheet" href="../css/topbar.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
+
+
     <script src="../foundation-js/modernizr.js"></script>
     <script src="../js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -24,7 +24,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="../index.html">Top Team</a></h1>
+                        <h1><a href="#">Top Team - Training</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
