--- a/player/player.html
+++ b/player/player.html
@@ -8,9 +8,8 @@
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../css/app.css"/>
-    <link rel="stylesheet" href="../jquery-ui/jquery.contextMenu.css"/>
     <link rel="stylesheet" href="../css/topbar.css"/>
+    <link rel="stylesheet" href="../css/app.css"/>
     <script src="../foundation-js/modernizr.js"></script>
     <script src="../js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -23,7 +22,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="../index.html">Top Team</a></h1>
+                        <h1><a href="#">Top Team - Training</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -55,6 +54,7 @@
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="player-container">
+                        <b>Übersicht Trainings und Trainingsbeteiligung:</b>
                         <table id="training-table">
                             <thead>
                             <tr>
@@ -77,6 +77,8 @@
                 <!-- player-in-training-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="training-container">
+                        <span data-tooltip class="has-tip" title="Spieler Trainings Details durch klicken auf Spieler!">Trainingsbeteilung Ranking:</span>
+
                         <table id="player-training-table">
                             <thead>
                             <tr>
@@ -121,7 +123,7 @@
 
 
 <script src="../foundation-js/foundation.min.js"></script>
-<script type="text/javascript" src="../jquery-ui/jquery.ui.position.js"></script>
+
 <script>
     $(document).foundation();
 </script>
