--- a/trainer/team.html
+++ b/trainer/team.html
@@ -20,7 +20,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="#">Top Team</a></h1>
+                        <h1><a href="#">Top Team - Spielerkader</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -29,7 +29,7 @@
             </nav>
             <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
-                    <li class="show-for-small"><label>Foundation</label></li>
+                    <li class="show-for-small"><label>Top Team</label></li>
                     <li><a href="training.html">Training</a></li>
                     <li><a href="../index.html" id="button-logout">Logout</a></li>
                 </ul>
@@ -46,6 +46,9 @@
                 <!-- player-container -------------------------------------------------------------------------------------------------------->
                 <div class="row">
                     <div class="large-12 columns" id="player-container">
+                         <span data-tooltip class="has-tip"
+                               title="Spieler bearbeiten durch Klicken auf Spieler!">Spieler Übersicht:</span>
+
                         <table id="player-table">
                             <thead>
                             <tr>
@@ -68,7 +71,7 @@
 <div id="modal-add-player" class="reveal-modal" data-reveal>
     <h2>Spieler anlegen</h2>
 
-    <p class="lead">Informationen zum Spieler</p>
+    <p class="lead">Geben Sie einen Spielernamen ein!</p>
 
     <div class="row">
         <p><input id="add-player-modal-input-player-name" required="true" placeholder="Vorname Nachname"/></p>
@@ -99,7 +102,7 @@
         </div>
         <form id="fileupload" name="fileupload" enctype="multipart/form-data" method="post">
             <fieldset>
-                <h4>Hier Bild für den Spieler hochladen</h4>
+                <h4>Hier Bild für Spieler hochladen</h4>
                 <input type="file" name="fileselect" id="fileselect" class="fileselect">
                 <input type="button" id="uploadbutton" class="button uploadbutton" value="Auf TopTeam hochladen"/>
             </fieldset>
