--- a/trainer/trainer.html
+++ b/trainer/trainer.html
@@ -19,7 +19,7 @@
             <nav class="tab-bar">
                 <div class="title-area">
                     <div class="name">
-                        <h1><a href="">Top Team</a></h1>
+                        <h1><a href="">Top Team - Start</a></h1>
                     </div>
                 </div>
                 <section class="right-small show-for-small">
@@ -28,7 +28,7 @@
             </nav>
             <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
-                    <li class="show-for-small"><label>Foundation</label></li>
+                    <li class="show-for-small"><label>Top Team</label></li>
                     <li><a href="training.html">Training</a></li>
                     <li><a href="team.html">Spielerkader</a></li>
                     <li><a href="../index.html" id="button-logout">Logout</a></li>
