--- a/trainer/team.html
+++ b/trainer/team.html
@@ -77,13 +77,17 @@
         <p><input id="add-player-modal-input-player-name" required="true" placeholder="Vorname Nachname"/></p>
     </div>
     <div class="row show-for-large-up">
-        <button class="large-4 columns" id="button-add-player">Spieler anlegen</button>
-        <button class="large-4 columns large-offset-4" id="button-add-next-player">Weiteren Spieler anlegen</button>
+        <button class="large-4 columns button-add-player" id="button-add-player">Spieler anlegen</button>
+        <button class="large-4 columns large-offset-4 button-add-next-player" id="button-add-next-player">Weiteren
+            Spieler anlegen
+        </button>
         <a class="close-reveal-modal">&#215;</a>
     </div>
     <div class="row show-for-medium-down">
-        <button class="small-12 columns" id="button-add-player-small">Spieler anlegen</button>
-        <button class="small-12 columns" id="button-add-next-player-small">Weiteren Spieler anlegen</button>
+        <button class="small-12 columns button-add-player" id="button-add-player-small">Spieler anlegen</button>
+        <button class="small-12 columns button-add-next-player" id="button-add-next-player-small">Weiteren Spieler
+            anlegen
+        </button>
         <a class="close-reveal-modal">&#215;</a>
     </div>
 </div>
@@ -126,7 +130,7 @@
     <div class="row">
         <div class="small-12 medium-12 columns">
             <div class="row">
-                <img id="image-player-small" class="img-player" src="../img/avatar.jpg" class="small-12 columns">
+                <img id="image-player-small" class="img-player small-12 columns" src="../img/avatar.jpg">
             </div>
             <div class="row">
                 <h3 class="player-name-change-modal"></h3>
