BUG suchen push

--- a/manager/manager-nutmeg.html
+++ b/manager/manager-nutmeg.html
@@ -53,7 +53,6 @@
                             <thead>
                             <tr>
                                 <th id="training-date" class="training-date">Datum</th>
-                                <th id="training-time" class="training-time">Uhrzeit</th>
                                 <th id="training-nutmeg-number" class="training-nutmeg-number">Anzahl Beiner</th>
                             </tr>
                             </thead>
@@ -73,7 +72,7 @@
                         <table id="player-nutmeg-table">
                             <thead>
                             <tr>
-                                <th id="player-pic" class="player-pic">Name</th>
+                                <th id="player-pic" class="player-pic">Bild</th>
                                 <th id="name-player" class="name-player">Name</th>
                                 <th id="nutmeg-sum" class="nutmeg-sum">Gesamt Beiner</th>
                                 <th id="nutmeg-not-paid-sum" class="nutmeg-not-paid-sum">Nicht bezahlt</th>
@@ -100,9 +99,7 @@
 
             <div class="row">
                 <div class="large-12 columns" id="modal-add-nutmeg-to-player-controll-panel">
-
                     <div id="header-date"></div>
-                    <div id="player-count"></div>
                 </div>
             </div>
             <!-- player-container -------------------------------------------------------------------------------------------------------->
