--- a/trainer/team.html
+++ b/trainer/team.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
-    <link rel='shortcut icon' type='image/x-icon' href='img/team.ico'/>
+    <link rel='shortcut icon' type='image/x-icon' href='../img/team.ico'/>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
@@ -30,6 +30,7 @@
             <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
                     <li class="show-for-small"><label>Top Team</label></li>
+                    <li><a href="trainer.html">Spieler informieren</a>
                     <li><a href="training.html">Training</a></li>
                     <li><a href="../index.html" id="button-logout">Logout</a></li>
                 </ul>
