--- a/trainer/training.html
+++ b/trainer/training.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width"/>
     <title>Top Team</title>
-    <link rel='shortcut icon' type='image/x-icon' href='img/team.ico'/>
+    <link rel='shortcut icon' type='image/x-icon' href='../img/team.ico'/>
     <script src="//www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <link rel="stylesheet" href="../css/foundation.min.css"/>
     <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../jquery-ui/jquery.contextMenu.css"/>
     <link rel="stylesheet" href="../css/topbar.css"/>
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="../css/fonts/foundation_icons_general/stylesheets/general_foundicons_ie7.css">
@@ -39,6 +38,7 @@
                     <li class="show-for-small">
                         <label>Top Team</label>
                     </li>
+                    <li><a href="trainer.html">Spieler informieren</a>
                     <li><a href="team.html">Spielerkader</a>
                     </li>
                     <li><a href="../index.html" id="button-logout">Logout</a>
@@ -173,7 +173,6 @@
 
 
 <script src="../foundation-js/foundation.min.js"></script>
-<script type="text/javascript" src="../jquery-ui/jquery.ui.position.js"></script>
 <script>
     $(document).foundation();
 </script>
