beiner geht einigermaßen

--- a/manager/manager-nutmeg.html
+++ b/manager/manager-nutmeg.html
@@ -120,7 +120,7 @@
                 </table>
             </div>
 
-            <a class="close-reveal-modal">&#215;</a>
+            <a class="close-reveal-modal" onclick="location.reload();">&#215;</a>
         </div>
     </div>
 </div>
